2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/Employee_Review_Forms_CS_SHP_GM_REG__c.object-meta.xml
<CustomObject>
    <description>Employee Review Forms (CS/SHP/GM/REG)

Customer Service/Shipping/Registrar/General Manager</description>
    <label>Employee Review Forms (CS/SHP/GM/REG)</label>
    <nameField>
        <displayFormat>EMP-{DD}-{MM}-{YYYY}-{0000}</displayFormat>
        <label>Employee Review Forms (CS/SHP/GM/REG)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Review Forms (CS/SHP/GM/REG)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>