2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Application_of_Permits__c.field-meta.xml
<CustomField>
    <fullName>Application_of_Permits__c</fullName>
    <description>II, OO, ATA Carnet, CITIES</description>
    <inlineHelpText>II, OO, ATA Carnet, CITIES</inlineHelpText>
    <label>Application of Permits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>