2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Art_Handling_Knowledge_GM__c.field-meta.xml
<CustomField>
    <fullName>Art_Handling_Knowledge_GM__c</fullName>
    <description>-Basic knowledge of art handling, packing materials (terminology / function &amp; purpose)</description>
    <inlineHelpText>-Basic knowledge of art handling, packing materials (terminology / function &amp; purpose)</inlineHelpText>
    <label>Art Handling Knowledge[GM]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>