2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Art_Storage_Facility_Floorplan__c.field-meta.xml
<CustomField>
    <fullName>Art_Storage_Facility_Floorplan__c</fullName>
    <description>Familiarity of the facility is critical for managing, planning and managing the storage area in a efficient and effective manner.</description>
    <inlineHelpText>Familiarity of the facility is critical for managing, planning and managing the storage area in a efficient and effective manner.</inlineHelpText>
    <label>Art Storage Facility Floorplan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>