2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Art_Storage_Facility_GM__c.field-meta.xml
<CustomField>
    <fullName>Art_Storage_Facility_GM__c</fullName>
    <description>-Knowledge of Art Storage Facility floorplan (map):
-Knowledge of the different types and terms of storage facilities (CSA, PSA, climate-control, etc.). -Ability to promote the facilities to clients.</description>
    <inlineHelpText>-Knowledge of Art Storage Facility floorplan (map):
-Knowledge of the different types and terms of storage facilities (CSA, PSA, climate-control, etc.). -Ability to promote the facilities to clients.</inlineHelpText>
    <label>Art Storage Facility [GM]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>