2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Artmove_Operations_SHP__c.field-meta.xml
<CustomField>
    <fullName>Artmove_Operations_SHP__c</fullName>
    <description>Knowledge of Artmove Operations</description>
    <inlineHelpText>Knowledge of Artmove Operations</inlineHelpText>
    <label>Artmove Operations [SHP]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>