2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Artwork_Safety__c.field-meta.xml
<CustomField>
    <fullName>Artwork_Safety__c</fullName>
    <description>-Knowledge of handling packing/unpacking, crating/uncrating, and fabrication of carton boxes to ensure that artwork is stored properly.-Ability to work with the warehouse team on the safe storage of the artworks.</description>
    <inlineHelpText>-Knowledge of handling packing/unpacking, crating/uncrating, and fabrication of carton boxes to ensure that artwork is stored properly.-Ability to work with the warehouse team on the safe storage of the artworks.</inlineHelpText>
    <label>Artwork Safety</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>