2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Asian_Works_on_Paper_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>Asian_Works_on_Paper_Visual_Check__c</fullName>
    <description>Asian works on Paper [Visual Check]</description>
    <inlineHelpText>Asian works on Paper [Visual Check]</inlineHelpText>
    <label>Asian Works on Paper [Visual Check]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>