2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Business_Acumen__c.field-meta.xml
<CustomField>
    <fullName>Business_Acumen__c</fullName>
    <description>-Solve a customer&apos;s issue and be their advocate, at the same time, be able to represent the company&apos;s interest. 
-Responsible for the customer&apos;s care.</description>
    <inlineHelpText>-Solve a customer&apos;s issue and be their advocate, at the same time, be able to represent the company&apos;s interest. 
-Responsible for the customer&apos;s care.</inlineHelpText>
    <label>Business Acumen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>