2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Business_Acumen_GM__c.field-meta.xml
<CustomField>
    <fullName>Business_Acumen_GM__c</fullName>
    <description>-Stays current with industry trends and monitors strengths and weakness of competition
- Explore new Business Opportunities 
- Identify new business leads
- Responsible for developing and implementing annual and medium term strategies, as well as establishing key performance objectives and plans to ensure that the team meets its business targets and drives sustainable profitable growth
- Keep ahead of industry trends (set the trends rather than follow)</description>
    <inlineHelpText>-Stays current with industry trends and monitors strengths and weakness of competition
- Explore new Business Opportunities 
- Identify new business leads
- Responsible for developing and implementing annual and medium term strategies, as well as establishing key performance objectives and plans to ensure that the team meets its business targets and drives sustainable profitable growth
- Keep ahead of industry trends (set the trends rather than follow)</inlineHelpText>
    <label>Business Acumen [GM]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>