2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Business_MGMT_Brand_Product_awareness__c.field-meta.xml
<CustomField>
    <fullName>Business_MGMT_Brand_Product_awareness__c</fullName>
    <description>-Analyses business information to proactively address changing market conditions, ensure division operates within budgetary guidelines, &amp; achieves profit margin goals
-Integrates business information into business plans
-Develop &amp; effectively promote ideas for improving services &amp; maximising customer services satisfaction
-Ensure that HT services, products &amp; events attain the appropriate publicity</description>
    <inlineHelpText>-Analyses business information to proactively address changing market conditions, ensure division operates within budgetary guidelines, &amp; achieves profit margin goals
-Integrates business information into business plans
-Develop &amp; effectively promote ideas for improving services &amp; maximising customer services satisfaction
-Ensure that HT services, products &amp; events attain the appropriate publicity</inlineHelpText>
    <label>Business Mgmt/Brand(Product)awareness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>