2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Ceramics_Glass_Data_Entry_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Ceramics_Glass_Data_Entry_Mgmt__c</fullName>
    <description>Data Entry/Management for Ceramics &amp; Glass</description>
    <inlineHelpText>Data Entry/Management for Ceramics &amp; Glass</inlineHelpText>
    <label>Ceramics &amp; Glass [Data Entry/Mgmt]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>