2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Ceramics_Glass_Material_Identi__c.field-meta.xml
<CustomField>
    <fullName>Ceramics_Glass_Material_Identi__c</fullName>
    <description>Material Identification for Ceramics &amp; Glass.</description>
    <inlineHelpText>Material Identification for Ceramics &amp; Glass.</inlineHelpText>
    <label>Ceramics &amp; Glass [Material Identi.]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>