2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Client_Management_GM__c.field-meta.xml
<CustomField>
    <fullName>Client_Management_GM__c</fullName>
    <description>-Interact with customers on a frequent basis to obtain feedback about their experiences with HT
-Emphasizes and holds HOD accountable for addressing service failures or potential service failures, and for developing innovative ways to exceed customer satisfaction
-Develop strategic alliances with local govt/agencies, businesses, and customers
-Anticipates needs of high profile customers &amp; events to deliver a flawless service</description>
    <inlineHelpText>-Interact with customers on a frequent basis to obtain feedback about their experiences with HT
-Emphasizes and holds HOD accountable for addressing service failures or potential service failures, and for developing innovative ways to exceed customer satisfaction
-Develop strategic alliances with local govt/agencies, businesses, and customers
-Anticipates needs of high profile customers &amp; events to deliver a flawless service</inlineHelpText>
    <label>Client Management [GM]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>