2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Client_Servicing_CS__c.field-meta.xml
<CustomField>
    <fullName>Client_Servicing_CS__c</fullName>
    <description>-Ability to interface with clients and respond in a timely manner to requests (via phone, email, calls)
 -Manage client&apos;s expectation
 -Actively seek feedback from client - share the information in a timely and accurate manner. So that team members can review &amp; track for improvements. 
 -Ability to expand client base by reaching out to potential clients whenever possible</description>
    <inlineHelpText>-Ability to interface with clients and respond in a timely manner to requests (via phone, email, calls)
 -Manage client&apos;s expectation
 -Actively seek feedback from client - share the information in a timely and accurate manner. So that team members can review &amp; track for improvements. 
 -Ability to expand client base by reaching out to potential clients whenever possible</inlineHelpText>
    <label>Client Servicing [CS]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>