2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Client_Servicing_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Client_Servicing_Shipping__c</fullName>
    <description>-Ability to interface with authorities, agents, forwarders, vendors, colleagues, etc.
 -Respond to enquires, clarifications, and changes in a timely manner (via phone, email, etc.)
 -Prepare shipping quotes
 -Manage colleague&apos;s and client&apos;s expectations
 -Actively seek feedback/updates from clients (agents, forwarders, etc.) - share the information in a timely and accurate manner. So that team members can review &amp; track for improvements.</description>
    <inlineHelpText>-Ability to interface with authorities, agents, forwarders, vendors, colleagues, etc.
 -Respond to enquires, clarifications, and changes in a timely manner (via phone, email, etc.)
 -Prepare shipping quotes
 -Manage colleague&apos;s and client&apos;s expectations
 -Actively seek feedback/updates from clients (agents, forwarders, etc.) - share the information in a timely and accurate manner. So that team members can review &amp; track for improvements.</inlineHelpText>
    <label>Client Servicing [Shipping]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>