2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Adaptability__c.field-meta.xml
<CustomField>
    <fullName>Comment_Adaptability__c</fullName>
    <description>Supervisor Comment for Resourcefulness.</description>
    <inlineHelpText>Supervisor Comment for Resourcefulness.</inlineHelpText>
    <label>Comment Adaptability</label>
    <type>TextArea</type>
</CustomField>