2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_CS_SHP_GM_REG__c/fields/Comment_Application_of_Permits__c.field-meta.xml
<CustomField>
    <fullName>Comment_Application_of_Permits__c</fullName>
    <description>Spvervisor Comment Application of Permits</description>
    <inlineHelpText>Spvervisor Comment Application of Permits.</inlineHelpText>
    <label>Comment Application of Permits</label>
    <type>TextArea</type>
</CustomField>